tests/NormalTests/paczka1/fuzzy1/30749553.err
Error in line 13: JeXNm8vdBft A206 17,8
Error in line 15: JeXNm8vdBft A869 79,6
Error in line 17: dwI4ISRV6Ww A206 34,2
